--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<!-- public/views/home.html -->
+<!-- /views/partial-home.html -->
 
 <div class="jumbotron text-center">
 	<h1>Home Page 4 Life</h1>
